Assign colors correctly also when the alpha channel is set.

DAV colors are in the form RGBA, whereas QColor takes them as ARGB.

BUG: 395216

Differential Revision: https://phabricator.kde.org/D13468